kafdrop/deployment.yaml
apiVersion:  apps.openshift.io/v1
kind: Deployment
metadata:
  name: kafkatest
  labels:
    name: kafdrop
spec:
  replicas: 1
  selector:
    name: kafdrop-up
  template:
    metadata:
      labels:
        name: kafdrop-up
    spec:
      containers:
        - name: kafdrop
          image: obsidiandynamics/kafdrop:latest
          imagePullPolicy: Always
          resources:
            requests:
              cpu: 10m
              memory: 256Mi
