kafdrop/service.yaml

apiVersion: v1
kind: Service
metadata:
  name: kafdrop
  labels:
    name: kafdrop
spec:
  type: NodePort
  ports:
    - port: 9000
      targetPort: http
      protocol: TCP
      name: http
      nodePort: 30900
  selector:
    name: kafdrop
